Create a Get all users endpoint
